# C-Cpp

./: .gitignore  CMakeLists.txt  README.md
C/: donut.c  menu.c  prueba1.c  redondeo_calificaciones.c
C++/: TestLibrary.cpp  allocating_memory.cpp  aritmetica.cpp  arrays_y_funciones.cpp  canguros_hackerrank.cpp  const_keyword.cpp  copy_constructors.cpp  encapsulacion.cpp  herencia.cpp  otro_hackerrank.cpp  pointer_aritmetica.cpp  static.cpp  string_pointers.cpp  timeconversion.cpp  utilidades.h  voltear_una_frase.cpp
C++/AMV v1/window/: display.cpp
C++/AlgoProblem/climbing_leaderboard/: CMakeLists.txt  main.cpp
C++/AlgoProblem/climbing_leaderbord/: CMakeLists.txt  main.cpp
C++/COURSERA - Algorithms/week1_programming_challenges/1_sum_of_two_digits/: aplusb.cpp
C++/COURSERA - Algorithms/week1_programming_challenges/2_maximum_pairwise_product/: max_pairwise_product.cpp
C++/Clases-Gato/: clases_poo.cpp  gato.h
C++/POO/: Gato.cpp  gato.h.gch
C++/Practice/: binary_search.cpp
C++/Referencias/: algomas.cpp  allocating_memory.cpp  arrays_y_funciones.cpp  bitwise_and.cpp  char_arrays.cpp  const_keyword.cpp  encapsulacion.cpp  headers_y_prototipos.cpp  herencia_y_constructores.cpp  operador_New.cpp  postfix_prefix.cpp  references.cpp  string_pointers.cpp  timeconv.cpp  twos_complement.cpp
C++/Referencias/allocating_memory/: CMakeLists.txt  allocating_memory.cpp
C++/Referencias/arrays_and_functions/: CMakeLists.txt  arrays_y_funciones.cpp
C++/Referencias/bitwise_and/: CMakeLists.txt  bitwise_and.cpp
C++/Referencias/char_arithmetic/: CMakeLists.txt
C++/Referencias/char_arrays/: CMakeLists.txt  char_arrays.cpp
C++/Referencias/const_keyword/: CMakeLists.txt
C++/Referencias/new_operator/: CMakeLists.txt  operador_New.cpp
C++/Referencias/pointer_aritmetica/: CMakeLists.txt
C++/Referencias/poo/copy_constructors/: CMakeLists.txt
C++/Referencias/poo/encapsulacion/: CMakeLists.txt
C++/Referencias/poo/herencia/: CMakeLists.txt
C++/Referencias/poo/herencia_y_constructores/: CMakeLists.txt
C++/Referencias/poo/returning_objects/: CMakeLists.txt  returning_objects.cpp
C++/Referencias/references/: CMakeLists.txt
C++/Referencias/static/: CMakeLists.txt
C++/Referencias/string_pointers/: CMakeLists.txt  string_pointers.cpp
C++/Referencias/string_volteado/: CMakeLists.txt
C++/SDL/: Pantalla.cpp  Pantalla.h  Particula.cpp  Particula.h  Swarm.cpp  Swarm.h  animando_colores.cpp  prueba_particulas.cpp  prueba_sdl.cpp  sdl_basico.cpp  sdltutorial.cpp
C++/UDEMY/: class.cpp  functions.cpp  oop.cpp  pointers.cpp
C++/UDEMY/basics/: main.cpp
C++/UDEMY/class/: Account.cpp  main.cpp
C++/UDEMY/class_oop/: Account.h  main.cpp
C++/UDEMY/const_en_classes/: main.cpp
C++/UDEMY/enums/: main.cpp
C++/UDEMY/exception_handling/: exception_handling.txt
C++/UDEMY/exception_handling/dividing_by_zero/: main.cpp
C++/UDEMY/exception_handling/exception as classes/: main.cpp
C++/UDEMY/exception_handling/exception_from_function/: main.cpp
C++/UDEMY/exception_handling/multiple_exception/: main.cpp
C++/UDEMY/exception_handling/stack_unwinding/: main.cpp
C++/UDEMY/file_io/reading_file/: main.cpp
C++/UDEMY/file_io/writing_file/: main.cpp
C++/UDEMY/io_and_streams/string_stream/: main.cpp
C++/UDEMY/lambdas/stateful_lambda/: main.cpp
C++/UDEMY/lambdas/stateless_lambda/: lambdas.cpp
C++/UDEMY/move_constructor/: main.cpp
C++/UDEMY/oop/friend_of_class/: main.cpp
C++/UDEMY/oop/herencia/: Savings_Account.cpp  main.cpp
C++/UDEMY/oop/static_class/: Player.h  main.cpp
C++/UDEMY/operator_overloading/: MyString.cpp  MyString.h  main.cpp
C++/UDEMY/operator_overloading/op_as_global_func/: MyString.h  main.cpp
C++/UDEMY/operator_overloading/overload_stream_in_out_op/: MyString.cpp  MyString.h  main.cpp
C++/UDEMY/pointers/: pointers.cpp
C++/UDEMY/pointers/smart_pointers/: raw_pointer_problems.txt
C++/UDEMY/shallow_and_deep_copy/: main.cpp
C++/UDEMY/shallow_copy_oop/: main.cpp
C++/UDEMY/static_class/: Player.cpp  Player.h  main.cpp
C++/UDEMY/stl/: stl.txt
C++/UDEMY/stl/class_template/: main.cpp
C++/UDEMY/stl/class_template_array/: main.cpp
C++/UDEMY/this/: main.cpp
CMake/03-Variables/: CMakeLists.txt
CMake/04-creating-executable/: CMakeLists.txt  main.cpp
CMake/05-creating-libraries/: CMakeLists.txt  ExampleClass.cpp  ExampleClass.h
CMake/06-cmake-modern-structure/: CMakeLists.txt
CMake/06-cmake-modern-structure/application/: CMakeLists.txt  main.cpp
CMake/06-cmake-modern-structure/calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h
CMake/06-cmake-modern-structure/server-provider/: CMakeLists.txt  ExampleClass.cpp  ExampleClass.h
CMake/07-project-structure-variables/: CMakeLists.txt
CMake/08-conditionals/: CMakeLists.txt
CMake/08-conditionals/src/: CMakeLists.txt
CMake/08-conditionals/src/application/: CMakeLists.txt  main.cpp
CMake/08-conditionals/src/calculator/: CMakeLists.txt
CMake/09-definitions/: CMakeLists.txt
CMake/09-definitions/application/: CMakeLists.txt  main.cpp
CMake/10-cmake-cache/: CMakeLists.txt  README.md
CMake/10-cmake-cache/application/: CMakeLists.txt
CMake/11-adding-test-to-build-system/: CMakeLists.txt  README.md
CMake/11-adding-test-to-build-system/src/: CMakeLists.txt
COURSERA - Algorithms/week2_algorithmic_warmup/1_fibonacci_number/: fibonacci.cpp
COURSERA - Algorithms/week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/: fibonacci_last_digit.cpp
COURSERA - Algorithms/week2_algorithmic_warmup/3_greatest_common_divisor/: gcd.cpp
COURSERA - Algorithms/week2_algorithmic_warmup/4_least_common_multiple/: lcm.cpp
COURSERA - Algorithms/week2_algorithmic_warmup/5_fibonacci_number_again/: fibonacci_huge.cpp
COURSERA - Algorithms/week3_greedy_algorithms/1_money_change/: change.cpp
COURSERA - Algorithms/week3_greedy_algorithms/2_maximum_value_of_the_loot/: fractional_knapsack.cpp
COURSERA - Algorithms/week3_greedy_algorithms/3_car_fueling/: car_fueling.cpp
COURSERA - Algorithms/week3_greedy_algorithms/4_maximum_advertisement_revenue/: dot_product.cpp
(+43 files in other folders)
