cmake_minimum_required(VERSION 3.10)
project(C_Cpp)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(C++/AlgoProblem/climbing_leaderboard)

add_subdirectory(C++/Referencias/allocating_memory)
add_subdirectory(C++/Referencias/arrays_and_functions)
add_subdirectory(C++/Referencias/bitwise_and)
add_subdirectory(C++/Referencias/char_arithmetic)
add_subdirectory(C++/Referencias/char_arrays)
add_subdirectory(C++/Referencias/const_keyword)
add_subdirectory(C++/Referencias/new_operator)
add_subdirectory(C++/Referencias/pointer_aritmetica)
add_subdirectory(C++/Referencias/references)
add_subdirectory(C++/Referencias/static)
add_subdirectory(C++/Referencias/string_pointers)
add_subdirectory(C++/Referencias/string_volteado)

add_subdirectory(C++/Referencias/poo/copy_constructors)
add_subdirectory(C++/Referencias/poo/encapsulacion)
add_subdirectory(C++/Referencias/poo/herencia)
add_subdirectory(C++/Referencias/poo/herencia_y_constructores)
add_subdirectory(C++/Referencias/poo/returning_objects)

